WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285518
[scroll-animations] borders on the source should not affect a view timeline subject's offset
https://bugs.webkit.org/show_bug.cgi?id=285518
Summary
[scroll-animations] borders on the source should not affect a view timeline s...
Antoine Quint
Reported
2025-01-07 07:22:27 PST
We are failing a large number of tests because we are incorrectly computing the offset from the subject to the source for view timelines as we include the source's borders, if any.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-07 07:22:40 PST
<
rdar://problem/142476585
>
Antoine Quint
Comment 2
2025-01-07 07:24:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38644
EWS
Comment 3
2025-01-07 10:25:23 PST
Committed
288541@main
(aa9d42d039dc): <
https://commits.webkit.org/288541@main
> Reviewed commits have been landed. Closing PR #38644 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug